--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,15 @@ body .padding-left-15 {
 body .toolbar {
   z-index: 1000;
   position: absolute;
-  top: 100px;
+  top: 45px;
   right: 0px;
   padding: 10px;
+}
+body .features-tile {
+  min-width: 300px;
+  max-width: 1140px;
+  min-height: 100px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
