--- a/less/style.less
+++ b/less/style.less
@@ -37,9 +37,18 @@ body {
   {
     z-index: 1000;
     position: absolute;
-    top: 100px;
+    top: 45px;
     right: 0px;
     padding: 10px;
+  }
+  .features-tile
+  {
+    min-width: 300px;
+    max-width: 1140px;
+    min-height: 100px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
 }
