--- a/less/style.less
+++ b/less/style.less
@@ -50,5 +50,49 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
   }
+  .quickLaunch
+  {
+    ul
+    {
+      width: 180px;
+      float: right;
+      li
+      {
+        width: 64px;
+        height: 64px;
+        line-height: 64px;
+        float: left;
+        list-style-type: none;
+        text-align: center;
+        margin: 1px;
+
+        div
+        {
+          margin: auto;
+          a
+          {
+            color: white;
+          }
+        }
+      }
+      li.orange
+      {
+        background-color: #FF9900
+      }
+      li.green
+      {
+        background-color: #99CC62
+      }
+      li.grey
+      {
+        background-color: #666666
+      }
+      li.blue
+      {
+        background-color: #0191C8
+      }
+
+    }
+  }
 
 }
