--- a/less/style.less
+++ b/less/style.less
@@ -94,5 +94,13 @@ body {
 
     }
   }
+  .infoBoard
+  {
+    float: left;
+    font-size: 24px;
+    padding: 10px;
+    text-align: center;
+    color: green;
+  }
 
 }
