--- a/less/style.less
+++ b/less/style.less
@@ -52,9 +52,10 @@ body {
   }
   .quickLaunch
   {
+    width: 100%;
+    margin: 10px;
     ul
     {
-      width: 180px;
       float: right;
       li
       {
@@ -96,7 +97,6 @@ body {
   }
   .infoBoard
   {
-    float: left;
     font-size: 24px;
     padding: 10px;
     text-align: center;
