--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,11 @@ body .features-tile {
   background-repeat: no-repeat;
   background-size: cover;
 }
+body .quickLaunch {
+  width: 100%;
+  margin: 10px;
+}
 body .quickLaunch ul {
-  width: 180px;
   float: right;
 }
 body .quickLaunch ul li {
@@ -160,7 +163,6 @@ body .quickLaunch ul li.blue {
   background-color: #0191c8;
 }
 body .infoBoard {
-  float: left;
   font-size: 24px;
   padding: 10px;
   text-align: center;
