the shopping cart todo: checkout function/contract function

--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,11 @@ body .infoBoard {
   text-align: center;
   color: green;
 }
+body input.qtyInput {
+  text-align: center;
+  width: 42px;
+}
+body .myicon {
+  font-size: 24px;
+  top: 6px;
+}
