--- a/less/style.less
+++ b/less/style.less
@@ -102,5 +102,14 @@ body {
     text-align: center;
     color: green;
   }
-
+  input.qtyInput
+  {
+    text-align: center;
+    width: 42px;
+  }
+  .myicon
+  {
+    font-size: 24px;
+    top: 6px;
+  }
 }
