--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ html > body > .ui-pnotify {
   display: block;
   margin: 0 auto;
 }
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
 body {
   padding-top: 50px;
 }
@@ -97,8 +101,11 @@ body [role=form] {
   margin: 10px;
 }
 body div.loading {
-  top: 10px;
-  right: 16px;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+  top: 0px;
+  right: 0px;
   position: absolute;
   background: black;
   z-index: 9999;
@@ -106,6 +113,12 @@ body div.loading {
 }
 body div.loading span {
   padding-left: 10px;
+}
+body div.loading div.iconcontainer {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 50%;
 }
 body .full-width {
   width: 100%;
