integration with the service

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,15 @@ html > body > .ui-pnotify {
   height: 100%;
   overflow: hidden;
 }
+.good_deal {
+  color: red;
+  font-weight: bolder;
+  font-size: x-large;
+}
+del {
+  text-decoration: line-through;
+  color: grey;
+}
 body {
   padding-top: 50px;
 }
