--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,17 @@
   height: 100%;
   overflow: hidden;
 }
+.good_deal
+{
+  color: red;
+  font-weight: bolder;
+  font-size: x-large;
+}
+del
+{
+  text-decoration: line-through;
+  color: grey;
+}
 body {
   padding-top: 50px;
   .tab-content
