--- a/templates/product.html
+++ b/templates/product.html
@@ -24,7 +24,7 @@
 			{{price_text}}
 		</div>
 		<div class='panel-body'>
-			{{price}} {{currency}}
+			{{{price_amount}}} {{currency}}
 		</div>
 	</div>
 	<div class='list-group-item panel panel-primary'>
@@ -40,7 +40,7 @@
 			{{description_text}}
 		</div>
 		<div class='panel-body'>
-			{{description}}
+			{{{description}}}
 		</div>
 	</div>
 </div>
