--- a/templates/cart.html
+++ b/templates/cart.html
@@ -5,10 +5,11 @@
 		<div class="panel-body">
 			<img src='{{cover}}' width="64px" height="64px"/>
 			{{unit_price}} {{currency}}
-			<input type="number" name="quantity" value='{{qty}}'  maxlength="4" size="4" class='qtyInput' data-productId='{{product_id}}' data-unitprice='{{unit_price}}'/> 
+			<input type="number" name="quantity" value='{{qty}}'  maxlength="4" size="4" class='qtyInput' data-productId='{{product_id}}' data-unitprice='{{unit_price}}'/>
 			<a href="javascript:void(0)" class='deleteLink' data-productId='{{product_id}}'>
 				<span class='glyphicon glyphicon-trash myicon'></span>
 			</a>
+			<span>{{price_desc}} {{stock_desc}}</span>
 		</div>
 	</div>
 	{{/items}}
