order is working in frontend

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -28,6 +28,7 @@
 		</div>
 	</div>
 	<!-- Quick lauch and the button -->
+	<div>{{total_text}} <span class='total_price'></span> CAD</div>
 	<div class="quickLaunch">
 		<ul>
 			<li class="orange"><div><a href="#!/cart/">{{cart_text}}</a></div></li>
