--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -28,7 +28,9 @@
 		</div>
 	</div>
 	<!-- Quick lauch and the button -->
-	<div>{{total_text}} <span class='total_price'></span> CAD</div>
+	<div>{{total_text}} <span class='total_price'></span> CAD + 
+				{{estimated_shipment_fee_text}} <span id='shipment'>0</span> CAD
+	</div>
 	<div class="quickLaunch">
 		<ul>
 			<li class="orange"><div><a href="#!/cart/">{{cart_text}}</a></div></li>
